--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "backbone": "^1.3.3",
-    "jquery": "^3.1.1"
+    "jquery": "2.2.x",
+    "underscore": "latest"
   }
 }
