--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
     "babel-preset-stage-3": "^6.17.0",
     "css-loader": "^0.26.1",
     "file-loader": "^0.9.0",
@@ -34,6 +35,8 @@
   "dependencies": {
     "backbone": "^1.3.3",
     "jquery": "2.2.x",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
     "underscore": "latest"
   }
 }
