--- a/package.json
+++ b/package.json
@@ -33,10 +33,7 @@
     "webpack-dev-server": "^1.16.2"
   },
   "dependencies": {
-    "backbone": "^1.3.3",
-    "jquery": "2.2.x",
     "react": "^15.4.1",
-    "react-dom": "^15.4.1",
-    "underscore": "latest"
+    "react-dom": "^15.4.1"
   }
 }
