--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "css-loader": "^0.26.1",
     "file-loader": "^0.9.0",
     "html-loader": "^0.4.4",
+    "node-sass": "^4.1.1",
+    "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.14.0",
@@ -34,6 +36,7 @@
   },
   "dependencies": {
     "react": "^15.4.1",
-    "react-dom": "^15.4.1"
+    "react-dom": "^15.4.1",
+    "react-router": "^3.0.0"
   }
 }
