--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "webpack-dev-server": "^1.16.2"
   },
   "dependencies": {
+    "material-ui": "^0.16.6",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
-    "react-router": "^3.0.0"
+    "react-router": "^3.0.0",
+    "react-tap-event-plugin": "^2.0.1"
   }
 }
